[gd_scene load_steps=14 format=2]

[ext_resource path="res://assets/main_menu/options_normal.png" type="Texture" id=1]
[ext_resource path="res://assets/main_menu/play_normal.png" type="Texture" id=2]
[ext_resource path="res://assets/main_menu/version.png" type="Texture" id=3]
[ext_resource path="res://assets/main_menu/characters.png" type="Texture" id=4]
[ext_resource path="res://assets/main_menu/mainmenubackground.png" type="Texture" id=5]
[ext_resource path="res://assets/main_menu/quit_normal.png" type="Texture" id=6]
[ext_resource path="res://scripts/Level.gd" type="Script" id=7]
[ext_resource path="res://sounds/Door-Bell-Ding-A1.wav" type="AudioStream" id=8]
[ext_resource path="res://sounds/Video-Game-Power-Level-Up-B1.wav" type="AudioStream" id=9]
[ext_resource path="res://assets/main_menu/titlemain.png" type="Texture" id=10]
[ext_resource path="res://assets/main_menu/play_pressed.png" type="Texture" id=11]
[ext_resource path="res://assets/main_menu/options_pressed.png" type="Texture" id=12]
[ext_resource path="res://assets/main_menu/quit_pressed.png" type="Texture" id=13]

[node name="MainLevel" type="CanvasLayer"]
script = ExtResource( 7 )
level_name = "main"

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0784314, 0.0666667, 0.0666667, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainMenu" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 120
custom_constants/margin_top = 80
custom_constants/margin_left = 120
custom_constants/margin_bottom = 80
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="MainMenu"]
margin_left = 120.0
margin_top = 80.0
margin_right = 967.0
margin_bottom = 520.0
mouse_filter = 0
size_flags_horizontal = 3
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenu/HBoxContainer"]
margin_right = 310.0
margin_bottom = 440.0
custom_constants/separation = 0

[node name="Logo" type="TextureRect" parent="MainMenu/HBoxContainer/VBoxContainer"]
margin_right = 310.0
margin_bottom = 184.0
texture = ExtResource( 10 )
stretch_mode = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenu/HBoxContainer/VBoxContainer"]
margin_top = 184.0
margin_right = 310.0
margin_bottom = 378.0
size_flags_vertical = 3
custom_constants/separation = 30
alignment = 1

[node name="ChangeSceneButton" type="TextureButton" parent="MainMenu/HBoxContainer/VBoxContainer/VBoxContainer"]
margin_top = 4.0
margin_right = 310.0
margin_bottom = 40.0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 11 )

[node name="OptionsButton" type="TextureButton" parent="MainMenu/HBoxContainer/VBoxContainer/VBoxContainer"]
margin_top = 70.0
margin_right = 310.0
margin_bottom = 106.0
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 12 )

[node name="QuitButton" type="TextureButton" parent="MainMenu/HBoxContainer/VBoxContainer/VBoxContainer"]
margin_top = 136.0
margin_right = 310.0
margin_bottom = 189.0
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 13 )

[node name="Version" type="TextureRect" parent="MainMenu/HBoxContainer/VBoxContainer"]
margin_top = 378.0
margin_right = 310.0
margin_bottom = 440.0
texture = ExtResource( 3 )
stretch_mode = 3

[node name="CenterContainer" type="CenterContainer" parent="MainMenu/HBoxContainer"]
margin_left = 314.0
margin_right = 847.0
margin_bottom = 440.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Characters" type="TextureRect" parent="MainMenu/HBoxContainer/CenterContainer"]
margin_top = 50.0
margin_right = 533.0
margin_bottom = 389.0
texture = ExtResource( 4 )
stretch_mode = 3

[node name="ButtonClickedSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )

[node name="LevelLoadedSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
[connection signal="pressed" from="MainMenu/HBoxContainer/VBoxContainer/VBoxContainer/ChangeSceneButton" to="." method="_on_ChangeSceneButton_pressed"]
[connection signal="pressed" from="MainMenu/HBoxContainer/VBoxContainer/VBoxContainer/OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="pressed" from="MainMenu/HBoxContainer/VBoxContainer/VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
