[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/optionscreen/optionscreenbackground.png" type="Texture" id=1]
[ext_resource path="res://assets/optionscreen/deck2button.png" type="Texture" id=2]
[ext_resource path="res://assets/blank533x339.png" type="Texture" id=3]
[ext_resource path="res://assets/optionscreen/deck3button.png" type="Texture" id=4]
[ext_resource path="res://assets/optionscreen/backbutton.png" type="Texture" id=5]
[ext_resource path="res://assets/optionscreen/titleoptions.png" type="Texture" id=6]
[ext_resource path="res://scripts/Options.gd" type="Script" id=7]
[ext_resource path="res://scripts/Level.gd" type="Script" id=8]
[ext_resource path="res://sounds/Video-Game-Power-Level-Up-B1.wav" type="AudioStream" id=9]
[ext_resource path="res://sounds/Door-Bell-Ding-A1.wav" type="AudioStream" id=10]
[ext_resource path="res://assets/optionscreen/deck1button_selected.png" type="Texture" id=11]

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource( 8 )
__meta__ = {
"_edit_vertical_guides_": [ -149.0 ]
}
level_name = "options"

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="MarginContainer" parent="Background"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Background/CenterContainer"]
margin_right = 1074.0
margin_bottom = 600.0
size_flags_horizontal = 3

[node name="VBoxContainer2" type="VBoxContainer" parent="Background/CenterContainer/HBoxContainer"]
margin_right = 533.0
margin_bottom = 600.0
size_flags_vertical = 3
custom_constants/separation = 0

[node name="BlankSpace" type="TextureRect" parent="Background/CenterContainer/HBoxContainer/VBoxContainer2"]
margin_right = 533.0
margin_bottom = 230.0
texture = ExtResource( 3 )

[node name="Expander" type="VBoxContainer" parent="Background/CenterContainer/HBoxContainer/VBoxContainer2"]
margin_top = 230.0
margin_right = 533.0
margin_bottom = 520.0
size_flags_vertical = 3

[node name="BackButton" type="TextureButton" parent="Background/CenterContainer/HBoxContainer/VBoxContainer2"]
margin_top = 520.0
margin_right = 533.0
margin_bottom = 600.0
texture_normal = ExtResource( 5 )

[node name="Expander2" type="VBoxContainer" parent="Background/CenterContainer/HBoxContainer"]
margin_left = 537.0
margin_right = 537.0
margin_bottom = 600.0
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Background/CenterContainer/HBoxContainer"]
margin_left = 541.0
margin_right = 1074.0
margin_bottom = 600.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="TextureRect" parent="Background/CenterContainer/HBoxContainer/VBoxContainer"]
margin_right = 533.0
margin_bottom = 250.0
texture = ExtResource( 6 )

[node name="CardDeck1Button" type="TextureButton" parent="Background/CenterContainer/HBoxContainer/VBoxContainer"]
margin_top = 254.0
margin_right = 533.0
margin_bottom = 334.0
texture_normal = ExtResource( 11 )

[node name="CardDeck2Button" type="TextureButton" parent="Background/CenterContainer/HBoxContainer/VBoxContainer"]
margin_top = 338.0
margin_right = 533.0
margin_bottom = 418.0
texture_normal = ExtResource( 2 )

[node name="CardDeck3Button" type="TextureButton" parent="Background/CenterContainer/HBoxContainer/VBoxContainer"]
margin_top = 422.0
margin_right = 533.0
margin_bottom = 502.0
texture_normal = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer2" type="CenterContainer" parent="Background"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonClickedSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )

[node name="LevelLoadedSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
[connection signal="pressed" from="Background/CenterContainer/HBoxContainer/VBoxContainer2/BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="pressed" from="Background/CenterContainer/HBoxContainer/VBoxContainer/CardDeck1Button" to="." method="_on_CardDeck1Button_pressed"]
[connection signal="pressed" from="Background/CenterContainer/HBoxContainer/VBoxContainer/CardDeck2Button" to="." method="_on_CardDeck2Button_pressed"]
